--- a/pumpkin-patch.html
+++ b/pumpkin-patch.html
@@ -13,7 +13,7 @@
 	<style>
 		body, html{ margin:0;padding:0; }
 		.background {
-			background-image: url('img/balloons.gif');
+			background-image: url('img/pumpkin-patch-2016.gif');
 			background-size: contain;
 			background-position: center;
 			background-repeat: no-repeat;
